[Dark mode] Left-nav and taxonomy color fixes (#1952)

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -26,11 +26,6 @@ $code-color: shade-color($secondary, 40%) !default;
 
 // UI element colors
 
-$border-color: $gray-300 !default;
-$td-sidebar-tree-root-color: $primary !default;
-$td-sidebar-bg-color: rgba($primary, 0.03) !default;
-$td-sidebar-border-color: $border-color !default;
-
 // Background colors for the sections on home page etc. It is a paint by number
 // system, starting at 0, where the number is taken from the shortcode's ordinal
 // if not provided by the user. These colors are all part of the theme palette,
